fixing validations
